# sillyTavern-launcher

./: .env  .gitignore  .lintstagedrc  .prettierrc  .tauriignore  README.md  UPDATELOGS.md  eslint.config.js  index.html  latest.json  metadata.json  middleware.ts  my_assets.txt  next.config.ts  package-lock.json  package.json  tailwind.config.js  updater.key  updater.key.pub  vite.config.ts
.github/workflows/: release.yml
.trae/rules/: gui.md
app/: globals.css  layout.tsx  page.tsx
app/[locale]/: HomeContent.tsx  page.tsx
components/: DownloadSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  LanguageSwitcher.tsx  Navigation.tsx  index.ts
data/: config.json  github-proxy-interceptor.js
hooks/: use-theme.ts
lib/: config.ts  i18n-config.ts  seo.ts  types.ts
scripts/: README.md  sync-version.js
src/: App.vue  main.ts  style.css  tailwind.config.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  itdog-check.json  tavern-desktop.json
src-tauri/data/: config.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/nsis/: template.nsi
src-tauri/nsis/languages/: English.nsh  SimpChinese.nsh
src-tauri/src/: character.rs  chat.rs  config.rs  elevation.rs  extensions.rs  finderst.rs  git.rs  lib.rs  main.rs  node.rs  sillytavern.rs  types.rs  utils.rs  worldinfo.rs
src/components/: AppTooltip.vue  CharacterCardDialog.vue  ChatDialog.vue  ConfigMigrateDialog.vue  GlobalDialog.vue  InstallDialog.vue  InstallExtensionDialog.vue  Model.vue  NetworkLinkDialog.vue  OneClickCapsule.vue  RepairGitDialog.vue  ResourceMigrateDialog.vue  UploadCharacterCardDialog.vue  UploadWorldInfoDialog.vue  WorldInfoDialog.vue
src/lang/: en-US.ts  index.ts  zh-CN.ts
src/layouts/: Oheader.vue
src/lib/: cache.ts  config.ts  consoleState.ts  imageCache.ts  index.ts  st_list.ts  theme.ts  updater.ts  useAnimations.ts  useCharacterCardDialog.ts  useChatDialog.ts  useCheckpoint.ts  useDialog.ts  useExtensionInstall.ts  useExtensions.ts  useInstall.ts  useNodeGitInstall.ts  useOneClick.ts  useReleases.ts  useRepairGitDialog.ts  useScan.ts  useUploadCharacterCard.ts  useUploadWorldInfo.ts  useWorldInfoDialog.ts
src/router/: index.ts
src/views/: Console.vue  Extensions.vue  Home.vue  Plugins.vue  Resources.vue  Settings.vue  Tavern.vue  Tools.vue  Versions.vue
styles/: globals.css
