[package]
name = "sillytavern-launcher-gui"
version = "1.0.2"
description = "SillyTavern Launcher GUI 是一个专为 SillyTavern 设计的跨平台桌面客户端，基于 Tauri v2 + Vue 3 + Rust 构建。它提供了直观、现代的图形界面，让用户无需命令行即可完整管理 SillyTavern 的安装、启动、配置和扩展。"
authors = ["AL01.CN"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sillytavern_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "gzip"] }
zip = "0.6.3"
futures-util = "0.3.32"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.44"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
sys-locale = "0.3.2"
libc = "0.2.183"
walkdir = "2.5.0"
rayon = "1.11.0"
indicatif = "0.18.4"
dirs = "6.0.0"
sysinfo = "0.38.4"
num_cpus = "1.17.0"
jwalk = "0.8.1"
sevenz-rust = "0.6.1"
catch-unwind = "0.3.0"
headless_chrome = { version = "1", features = [] }
regex = "1"
get_if_addrs = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
